modification de la classe inscription

--- a/templates/disign/boot.html.twig
+++ b/templates/disign/boot.html.twig
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
-                <a class="nav-link " href="{{ path('etudiant_new') }}">Remplir fiche Inscriprion </a>
+                <a class="nav-link " href="{{ path('inscription_new') }}">Remplir fiche Inscriprion </a>
                 <a class="nav-link" href="#">Pricing</a>
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
             </div>
