--- a/templates/inscription/index.html.twig
+++ b/templates/inscription/index.html.twig
@@ -9,10 +9,18 @@
         <thead>
             <tr>
                 <th>Id</th>
+                <th>Nom</th>
+                <th>Prenom</th>
+                <th>DateNaissance</th>
+                <th>NumeroEtu</th>
+                <th>Email</th>
+                <th>Tel</th>
+                <th>Adresse</th>
                 <th>DateInscription</th>
-                <th>RegimeRSE</th>
                 <th>Redoublant</th>
+                <th>RegimeRSE</th>
                 <th>TierTemps</th>
+                <th>TypeControleChoisi</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -20,10 +28,18 @@
         {% for inscription in inscriptions %}
             <tr>
                 <td>{{ inscription.id }}</td>
-                <td>{{ inscription.dateInscription ? inscription.dateInscription|date('d-m-Y à H:i:s') : '' }}</td>
-                <td>{{ inscription.regimeRSE }}</td>
+                <td>{{ inscription.nom }}</td>
+                <td>{{ inscription.prenom }}</td>
+                <td>{{ inscription.dateNaissance ? inscription.dateNaissance|date('Y-m-d') : '' }}</td>
+                <td>{{ inscription.numeroEtu }}</td>
+                <td>{{ inscription.email }}</td>
+                <td>{{ inscription.tel }}</td>
+                <td>{{ inscription.adresse }}</td>
+                <td>{{ inscription.dateInscription ? inscription.dateInscription|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ inscription.redoublant }}</td>
+                <td>{{ inscription.regimeRSE }}</td>
                 <td>{{ inscription.tierTemps }}</td>
+                <td>{{ inscription.typeControleChoisi }}</td>
                 <td>
                     <a href="{{ path('inscription_show', {'id': inscription.id}) }}">show</a>
                     <a href="{{ path('inscription_edit', {'id': inscription.id}) }}">edit</a>
@@ -31,7 +47,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="6">no records found</td>
+                <td colspan="14">no records found</td>
             </tr>
         {% endfor %}
         </tbody>
