--- a/templates/inscription/show.html.twig
+++ b/templates/inscription/show.html.twig
@@ -12,20 +12,52 @@
                 <td>{{ inscription.id }}</td>
             </tr>
             <tr>
-                <th>DateInscription</th>
-                <td>{{ inscription.dateInscription ? inscription.dateInscription|date('Y-m-d H:i:s') : '' }}</td>
+                <th>Nom</th>
+                <td>{{ inscription.nom }}</td>
             </tr>
             <tr>
-                <th>RegimeRSE</th>
-                <td>{{ inscription.regimeRSE }}</td>
+                <th>Prenom</th>
+                <td>{{ inscription.prenom }}</td>
+            </tr>
+            <tr>
+                <th>DateNaissance</th>
+                <td>{{ inscription.dateNaissance ? inscription.dateNaissance|date('Y-m-d') : '' }}</td>
+            </tr>
+            <tr>
+                <th>NumeroEtu</th>
+                <td>{{ inscription.numeroEtu }}</td>
+            </tr>
+            <tr>
+                <th>Email</th>
+                <td>{{ inscription.email }}</td>
+            </tr>
+            <tr>
+                <th>Tel</th>
+                <td>{{ inscription.tel }}</td>
+            </tr>
+            <tr>
+                <th>Adresse</th>
+                <td>{{ inscription.adresse }}</td>
+            </tr>
+            <tr>
+                <th>DateInscription</th>
+                <td>{{ inscription.dateInscription ? inscription.dateInscription|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
             <tr>
                 <th>Redoublant</th>
                 <td>{{ inscription.redoublant }}</td>
             </tr>
             <tr>
+                <th>RegimeRSE</th>
+                <td>{{ inscription.regimeRSE }}</td>
+            </tr>
+            <tr>
                 <th>TierTemps</th>
                 <td>{{ inscription.tierTemps }}</td>
+            </tr>
+            <tr>
+                <th>TypeControleChoisi</th>
+                <td>{{ inscription.typeControleChoisi }}</td>
             </tr>
         </tbody>
     </table>
