--- a/templates/inscription/show.html.twig
+++ b/templates/inscription/show.html.twig
@@ -3,14 +3,10 @@
 {% block title %}Inscription{% endblock %}
 
 {% block body %}
-    <h1>Inscription</h1>
+    <div align="center"><h1>Récapitulatif de L'inscription</h1></div>
 
     <table class="table">
         <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ inscription.id }}</td>
-            </tr>
             <tr>
                 <th>Nom</th>
                 <td>{{ inscription.nom }}</td>
