--- a/templates/inscription/index.html.twig
+++ b/templates/inscription/index.html.twig
@@ -1,57 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Inscription index{% endblock %}
+{% block title %} Liste des Inscriptions {% endblock %}
 
 {% block body %}
-    <h1>Inscription index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Nom</th>
-                <th>Prenom</th>
-                <th>DateNaissance</th>
-                <th>NumeroEtu</th>
-                <th>Email</th>
-                <th>Tel</th>
-                <th>Adresse</th>
-                <th>DateInscription</th>
-                <th>Redoublant</th>
-                <th>RegimeRSE</th>
-                <th>TierTemps</th>
-                <th>TypeControle</th>
-                <th>semestre</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for inscription in inscriptions %}
-            <tr>
-                <td>{{ inscription.nom }}</td>
-                <td>{{ inscription.prenom }}</td>
-                <td>{{ inscription.dateNaissance ? inscription.dateNaissance|date('Y-m-d') : '' }}</td>
-                <td>{{ inscription.numeroEtu }}</td>
-                <td>{{ inscription.email }}</td>
-                <td>{{ inscription.tel }}</td>
-                <td>{{ inscription.adresse }}</td>
-                <td>{{ inscription.dateInscription ? inscription.dateInscription|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ inscription.redoublant }}</td>
-                <td>{{ inscription.regimeRSE }}</td>
-                <td>{{ inscription.tierTemps }}</td>
-                <td>{{ inscription.typeControleChoisi }}</td>
-                <td>{{ inscription.idSemestre.numeroSemestre }}</td>
-                <td>
-                    <a href="{{ path('inscription_show', {'id': inscription.id}) }}">show</a>
-                    <a href="{{ path('inscription_edit', {'id': inscription.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="14">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('inscription_new') }}">Create new</a>
+    {% for inscription in inscriptions %}
+        {%  include 'disign/_minicard.html.twig' %}
+    {% endfor %}
 {% endblock %}
