--- a/templates/matiere/_delete_form.html.twig
+++ b/templates/matiere/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('matiere_delete', {'id': matiere.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('matiere_delete', {'id': matiere.id}) }}" onsubmit="return confirm('etes vous sur de vouloir supprimer ?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ matiere.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-success">Supprimer</button>
 </form>
