--- a/templates/matiere/edit.html.twig
+++ b/templates/matiere/edit.html.twig
@@ -1,13 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Matiere{% endblock %}
+{% block title %}Modifier Matiere{% endblock %}
 
 {% block body %}
-    <h1>Edit Matiere</h1>
+    <h1>Modifier Matiere</h1>
 
-    {{ include('matiere/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('matiere_index') }}">back to list</a>
+    {{ include('matiere/_form.html.twig', {'button_label': 'Modifier'}) }}
 
     {{ include('matiere/_delete_form.html.twig') }}
 {% endblock %}
