--- a/templates/matiere/index.html.twig
+++ b/templates/matiere/index.html.twig
@@ -3,16 +3,17 @@
 {% block title %}Matiere index{% endblock %}
 
 {% block body %}
-    <h1>Matiere index</h1>
+    <h1 align="center">Liste des Matieres</h1><br>
 
     <table class="table">
         <thead>
             <tr>
-                <th>Identifiant Matiere</th>
-                <th>Nom de la Matiere</th>
-                <th>Matiere Obligatoire</th>
-                <th>Coefficient de la Matiere</th>
-                <th>Note Matiere</th></th>
+
+                <th>numero Etudiant</th>
+                <th>identifiant matiere</th>
+                <th>nom matiere</th>
+                <th>NoteObtenue</th>
+                <th>Obligation de suivie</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -20,24 +21,24 @@
         {% for matiere in matieres %}
             <tr>
 
-                <td>{{ matiere.idMatiere}}</td>
-                <td>{{ matiere.nomMatiere}}</td>
+                <td>{{ matiere.numeroEtudiant }}</td>
+                <td>{{ matiere.idMatiere }}</td>
+                <td>{{ matiere.nomMatiere.getLibelle }}</td>
+                <td>{{ matiere.noteObtenue }}</td>
 
-
-
+                <td>{{ matiere.matiereObligatoire.getObligatoire }}</td>
 
                 <td>
-                    <a href="{{ path('matiere_show', {'id': matiere.id}) }}">show</a>
-                    <a href="{{ path('matiere_edit', {'id': matiere.id}) }}">edit</a>
+                    <a href="{{ path('matiere_show', {'id': matiere.id}) }}">Lire la suite</a>
+                    <a href="{{ path('matiere_edit', {'id': matiere.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="2">no records found</td>
+                <td colspan="3">Liste vide </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('matiere_new') }}">Create new</a>
 {% endblock %}
