--- a/templates/matiere/new.html.twig
+++ b/templates/matiere/new.html.twig
@@ -1,11 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Matiere{% endblock %}
+{% block title %}Nouveau Matiere{% endblock %}
 
 {% block body %}
-    <h1>Create new Matiere</h1>
+    <h1>Nouveau Matiere</h1>
 
     {{ include('matiere/_form.html.twig') }}
 
-    <a href="{{ path('matiere_index') }}">back to list</a>
 {% endblock %}
