--- a/templates/matiere/show.html.twig
+++ b/templates/matiere/show.html.twig
@@ -8,15 +8,19 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ matiere.id }}</td>
+                <th>NoteObtenue</th>
+                <td>{{ matiere.noteObtenue }}</td>
+            </tr><tr>
+                <th>NoteObtenue</th>
+                <td>{{ matiere.noteObtenue }}</td>
+            </tr><tr>
+                <th>NoteObtenue</th>
+                <td>{{ matiere.noteObtenue }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('matiere_index') }}">back to list</a>
-
-    <a href="{{ path('matiere_edit', {'id': matiere.id}) }}">edit</a>
+    <a href="{{ path('matiere_edit', {'id': matiere.id}) }}">Modifier</a>
 
     {{ include('matiere/_delete_form.html.twig') }}
 {% endblock %}
