--- a/templates/module/edit.html.twig
+++ b/templates/module/edit.html.twig
@@ -1,13 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Module{% endblock %}
+{% block title %}Modifier Module{% endblock %}
 
 {% block body %}
-    <h1>Edit Module</h1>
+    <h1 align="center">Modification  Module</h1>
 
-    {{ include('module/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('module_index') }}">back to list</a>
+    {{ include('module/_form.html.twig', {'button_label': 'Modifier'}) }}
 
     {{ include('module/_delete_form.html.twig') }}
 {% endblock %}
