--- a/templates/module/new.html.twig
+++ b/templates/module/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Module{% endblock %}
+{% block title %}Nouveau Module{% endblock %}
 
 {% block body %}
-    <h1>Create new Module</h1>
+    <h1>Nouveau  Module</h1>
 
     {{ include('module/_form.html.twig') }}
 
-    <a href="{{ path('module_index') }}">back to list</a>
+    <a href="{{ path('module_index') }}">Retour</a>
 {% endblock %}
