--- a/templates/module/show.html.twig
+++ b/templates/module/show.html.twig
@@ -7,7 +7,6 @@
 
     <table class="table">
         <tbody>
-
             <tr>
                 <th>IdModule</th>
                 <td>{{ module.idModule }}</td>
@@ -21,19 +20,13 @@
                 <td>{{ module.obligatoire }}</td>
             </tr>
             <tr>
-                <th>NoteObtenue</th>
-                <td>{{ module.noteObtenue }}</td>
-            </tr>
-            <tr>
                 <th>Coefficient</th>
                 <td>{{ module.coefficient }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('module_index') }}">back to list</a>
-
-    <a href="{{ path('module_edit', {'id': module.id}) }}">edit</a>
+    <a href="{{ path('module_edit', {'id': module.id}) }}">Modifier</a>
 
     {{ include('module/_delete_form.html.twig') }}
 {% endblock %}
