--- a/templates/semestre/index.html.twig
+++ b/templates/semestre/index.html.twig
@@ -1,14 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Semestre index{% endblock %}
+{% block title %}Semestre {% endblock %}
 
 {% block body %}
-    <h1>Semestre index</h1>
+    <h1> Liste des Semestre </h1>
 
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>NumeroSemestre</th>
                 <th>actions</th>
             </tr>
@@ -16,20 +15,17 @@
         <tbody>
         {% for semestre in semestres %}
             <tr>
-                <td>{{ semestre.id }}</td>
                 <td>{{ semestre.numeroSemestre }}</td>
                 <td>
-                    <a href="{{ path('semestre_show', {'id': semestre.id}) }}">show</a>
-                    <a href="{{ path('semestre_edit', {'id': semestre.id}) }}">edit</a>
+                    <a href="{{ path('semestre_show', {'id': semestre.id}) }}">Lire la suite</a>
+                    <a href="{{ path('semestre_edit', {'id': semestre.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="3">no records found</td>
+                <td colspan="3">Liste vide </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('semestre_new') }}">Create new</a>
 {% endblock %}
