--- a/templates/semestre/new.html.twig
+++ b/templates/semestre/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Semestre{% endblock %}
+{% block title %}Nouveau Semestre{% endblock %}
 
 {% block body %}
-    <h1>Create new Semestre</h1>
+    <h1>Nouveau Semestre</h1>
 
     {{ include('semestre/_form.html.twig') }}
 
-    <a href="{{ path('semestre_index') }}">back to list</a>
+    <a href="{{ path('semestre_index') }}">Retour </a>
 {% endblock %}
