--- a/templates/semestre/show.html.twig
+++ b/templates/semestre/show.html.twig
@@ -8,19 +8,13 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ semestre.id }}</td>
-            </tr>
-            <tr>
                 <th>NumeroSemestre</th>
                 <td>{{ semestre.numeroSemestre }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('semestre_index') }}">back to list</a>
-
-    <a href="{{ path('semestre_edit', {'id': semestre.id}) }}">edit</a>
+    <a href="{{ path('semestre_edit', {'id': semestre.id}) }}">Modifier</a>
 
     {{ include('semestre/_delete_form.html.twig') }}
 {% endblock %}
