--- a/templates/disign/boot.html.twig
+++ b/templates/disign/boot.html.twig
@@ -23,8 +23,9 @@
                     </a>
 
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        <a class="dropdown-item " href="{{ path('inscription_index') }}">Liste des Etudiant inscrits</a>
                         <a class="dropdown-item " href="{{ path('inscription_new') }}">Remplir fiche Inscriprion</a>
+                        <a class="dropdown-item " href="{{ path('inscription_index') }}">Liste des Etudiant inscrits</a>
+                        <a class="dropdown-item " href="{{ path('inscription_index') }}">telecharger le recap</a>
                     </div>
                 </div>
                 <div class="dropdown">
