--- a/templates/inscription/recap.html.twig
+++ b/templates/inscription/recap.html.twig
@@ -1,16 +1,5 @@
+{% extends 'base.html.twig' %}
 {% block body %}
     <h1 align="center">Recapitulatif de l'inscription </h1>
-    <tr>
-        <th>Nom</th>
-        <th>Prenom</th>
-        <th>DateNaissance</th>
-        <th>NumeroEtu</th>
-        <th>Email</th>
-        <th>Tel</th>
-        <th>Adresse</th>
-        <th>DateInscription</th>
-        <th>DateInscription</th>
-
-    </tr>
-
+    {% include'disign/_pdf.html.twig'  %}
 {% endblock %}
