projet ok mais reste à verifier quelque detail en application

--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -3,8 +3,19 @@
 {% block title %}Hello AcceuilController!{% endblock %}
 
 {% block body %}
+    <style>
+        img{
+            po;
+        }
+    </style>
     <article class="container">
         <div class="row">
+            <div>
+                <br><br><br>
+                <img src="/images/vue_aerienne.jpg">
+
+            </div>
+
 
             <div class="col s12 m12 l8 offset-l2">
                 <p>
@@ -39,4 +50,6 @@
         </div>
 
     </article>
+
+
 {% endblock %}
