--- a/templates/validation/index.html.twig
+++ b/templates/validation/index.html.twig
@@ -30,7 +30,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="4">Liste vide !</td>
+                <td align="center">Liste vide !</td>
             </tr>
         {% endfor %}
         </tbody>
