--- a/templates/semestre/index.html.twig
+++ b/templates/semestre/index.html.twig
@@ -23,7 +23,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="3">Liste vide </td>
+                <td colspan="3" align="center">Liste vide </td>
             </tr>
         {% endfor %}
         </tbody>
