--- a/templates/disign/_minicard.html.twig
+++ b/templates/disign/_minicard.html.twig
@@ -3,8 +3,8 @@
          onclick="location.href='{{ path('inscription_show',{'id' : inscription.id}) }}'">
         <table>
             <tbody>
-            <th colspan="4">{{ inscription.nom }}</th>
-            <th rowspan="5">{{ inscription.prenom }}</th>
+            <th colspan="4">{{ inscription.nom }} {{ inscription.prenom }}</th>
+
 
             </tbody>
 
