--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -5,20 +5,20 @@
 {% block body %}
     <style>
         img{
-            po;
+            height: 350px;
         }
     </style>
     <article class="container">
         <div class="row">
             <div>
-                <br><br><br>
-                <img src="/images/vue_aerienne.jpg">
+                <br><br><br><br><br><br>
+                <img src="image/logo.jfif">
 
             </div>
 
 
             <div class="col s12 m12 l8 offset-l2">
-                <p>
+                <p><br><br>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
