--- a/templates/disign/boot.html.twig
+++ b/templates/disign/boot.html.twig
@@ -91,8 +91,7 @@
                 <div class="navbar-nav" >
 
                     {% if is_granted('ROLE_ADMIN') %}
-                        <a class="nav-link" href="{{path('admin')  }}">Admin</a>
-                        <a class="nav-link" href="{{path('admin/utilisateurs')  }}">Utilisateurs</a>
+                        <a class="nav-link" href="{{path('admin/utilisateurs')  }}">Admin</a>
                     {% endif %}
 
                 </div>
